# nixos-config

./: .envrc  .gitignore  .pre-commit-config.yaml  README.md  configuration.nix  flake.nix  flake.nix.backup  shell.nix
.devenv/: profile
.direnv/: flake-profile-a5d5b61aa8a61b7d9d765e1daf971a9a578f1cfa  flake-profile-a5d5b61aa8a61b7d9d765e1daf971a9a578f1cfa.rc
.direnv/flake-inputs/: 16bxbf67aii4bcb7kh6p5q03aci4593k-source  8fb9vw0998bi2zcdbdk2ssbkxkxs980h-source  aii4hdx0cj22hqys488h0n6a3hcpm8vi-source  c8aplaf4cij0zr4bca19y1k2vi9qhslz-source  d75wmywp2b8zrp81abnnk7z6hd75yfcg-source  h2gflq5j0vc55my31b5kfbhsfigarq0w-source  jf69xvyjjvwbmhxq84dy4f10js1pz6hb-source  m06pp2dw99zp8yc7biq7x54cq8z7azrc-source  nn718rqcsrx9ag8kligmfghdqqh5bick-source  p9ammkz591y133jy5mzin5hmrnz9nzbq-source  v3dzkqmafmjcx98rhaf7zqf34zgv3zyd-source  zdc4pvbcp3ydvgxi6kndj2abvfxkrgr7-source
.github/workflows/: deadnix.yml
home/: default.nix  xdg.nix
home/hosts/: desktop.nix  surface.nix
home/modules/: bash.nix  bat.nix  blesh.nix  broot.nix  dunst.nix  eza.nix  firefox.nix  foot.nix  fzf.nix  gammastep.nix  git.nix  gtk.nix  helix.nix  home-manager.nix  i3status-rust.nix  ironbar.nix  ironbar1.nix  leftwm.nix  mpv.nix  nushell.nix  nwg-drawer.nix  rbw.nix  (+15 more)
home/modules/eww/widgets/: .gitignore  Cargo.toml  result
home/modules/sway/scripts/: Cargo.toml  result
modules/: bluetooth.nix  bootloader.nix  development.nix  fonts.nix  homemanager.nix  i3status-rust.nix  leftwm.nix  nix.nix  polkit.nix  sound.nix  usb.nix  users.nix  wifi.nix
secrets/: secret-key-base64  secrets.json
(+96 files in other folders)
