[package]
# If you change the name here, run `cargo generate-lockfile` afterwards
name = "widgets"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = "1.0.189"
serde_json = "1.0.107"
swayipc = "3.0.1"
