[package]
# If you change the name here, run `cargo generate-lockfile` afterwards
name = "scripts"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
image = "0.24.7"
serde = { version = "1.0.192", features = ["derive"] }
serde_json = "1.0.108"
swayipc = "3.0.1"
